test/kubernetes/e2e/features/basicrouting/testdata/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-web-svc
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
          name: http-web-svc
